# describe

./: .gitignore  CHANGELOG.md  EXAMPLE.md  README.md  config_manager.py  describe.py  dev.sh  package.json  pyproject.toml  server.json
docs/: cli.md  install.md
scripts/: setup.js
tests/: test_describe.py
